# PostgreSQL_Real_Time_Monitor

./: BUILD.md  CMakeLists.txt  README.md  build.bat  build.sh  check_build_deps.bat  check_build_deps.sh  config.txt  main.cpp
config/: database.conf  queries.conf
include/: AlertSystem.h  AlertWindow.h  ConfigManager.h  DatabaseManager.h  QueryEngine.h
src/: AlertSystem.cpp  AlertWindow.cpp  ConfigManager.cpp  DatabaseManager.cpp  QueryEngine.cpp
